src/App.css
body {
  font-family: 'Commissioner', sans-serif;
  font-weight: medium;
  font-size: 16px;
  background-color: hsla(0, 0%, 48%, 0.1);
}

.hero {
  color: white;
  height: 300px;
  background: url("./images/image-hero-mobile.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.hero-content {
  display: flex;
  padding: 30px 25px;
  justify-content: space-between;
  align-items: center;
}

.hero-title {
  font-weight: bold;
  font-size: large;
}

.menu {
  width: 15px;
  height: 15px;
  background-image: url('./icons/icon-hamburger.svg');
  background-repeat: no-repeat;
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin: 20px 30px 0px 30px;
  border-radius: 10px;
  padding: 20px 30px;
  background-color: white;
}

.header {
  margin-top: -55px;
  padding-top: 40px;
  padding-bottom: 30px;
}

.project-logo {
  width: 56px;
  height: 56px;
  background-image: url('./icons/logo-mastercraft.svg');
  background-repeat: no-repeat;
  margin-top: -69px;
}

.project-name {
  font-weight: bold;
  font-size: larger;
  margin-top: 20px;
}

.project-desc {
  font-size: smaller;
  color: hsla(0, 0%, 48%, 0.75);
  margin-bottom: 20px;
}

.btn-container {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.btn {
  border: none;
  font-family: inherit;
}

.primary-btn {
  max-width: 200px;
  flex-grow: 2;
  float: left;
  color: white;
  border-radius: 50px;
  padding: 0 25px;
  background-color: hsl(176, 50%, 47%);
}

.bookmark-btn {
  width: 50px;
  height: 50px;
  margin-left: 10px;
  background-size: 50px, 50px;
  background-image: url('./icons/icon-bookmark.svg');
  background-repeat: no-repeat;
  background-color: inherit;
}

.project-stats {
  justify-content: space-between;
}

.stat-tracker {
  margin-bottom: 10px;
}

.stat-tracker > .value {
  font-size: x-large;
  font-weight: bold;
  margin-bottom: 10px;
}

.stat-tracker > .description {
  font-size: smaller;
  color: hsl(0, 0%, 48%, 0.75);
}

.separator {
  margin: 10px 0px 20px 0px;
  width: 70px;
  height: 0;
  border: 1px solid hsl(0, 0%, 48%, 0.2);
}

.progress-bar {
  width: 100%;
  height: 10px;
  border-radius: 5px;
  background-color: hsl(0, 0%, 48%, 0.1);
}

.progress-bar > .progress {
  height: 100%;
  background-color: hsl(176, 50%, 47%);
  border-radius: 5px;
}

@media only screen and (min-width: 768px) {
  .separator {
    margin: 0 20px;
    width: 0;
    height: 70px;
  }
}

